--- a/xarchiver/trunk/PKGBUILD
+++ b/xarchiver/trunk/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=xarchiver
 pkgver=0.5.2
-pkgrel=1
+pkgrel=2
 pkgdesc="GTK+ frontend to various command line archivers"
 arch=('i686' 'x86_64')
-url="http://xarchiver.xfce.org/"
+url="http://xarchiver.sourceforge.net"
 license=('GPL')
 groups=('xfce4-goodies')
 depends=('gtk2' 'desktop-file-utils' 'hicolor-icon-theme')
@@ -30,8 +30,11 @@ md5sums=('2bc7f06403cc6582dd4a8029ec9d038d')
 
 build() {
   cd "$srcdir/xarchiver-$pkgver"
+  ./configure --prefix=/usr --libexecdir=/usr/lib/xfce4
+  make
+}
 
-  ./configure --prefix=/usr --libexecdir=/usr/lib/xfce4 || return 1
-  make || return 1
-  make DESTDIR="$pkgdir" install || return 1
+package() {
+  cd "$srcdir/xarchiver-$pkgver"
+  make DESTDIR="$pkgdir" install
 }
