--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Thomas Baechler <thomas.baechler@rwth-aachen.de>
 
 pkgname=cups-pdf
-pkgver=2.5.0
+pkgver=2.5.1
 pkgrel=1
 pkgdesc="PDF printer for cups"
 arch=(i686 x86_64)
@@ -13,19 +13,22 @@ url="http://cip.physik.uni-wuerzburg.de/~vrbehr/cups-pdf"
 license=('GPL2')
 source=(http://cip.physik.uni-wuerzburg.de/~vrbehr/cups-pdf/src/cups-pdf_$pkgver.tar.gz)
 backup=(etc/cups/cups-pdf.conf)
-md5sums=('9194af099a8c0e9aa213505b29ec6818')
+md5sums=('4b4cf1a249d02a38045db74b5f259aac')
 
 build() {
-  # Build and install
   cd $srcdir/$pkgname-$pkgver/src
   [ -z "$CC" ] && CC=gcc
-  $CC $CFLAGS -Wall -o cups-pdf cups-pdf.c || return 1
-  install -D -m700 cups-pdf $pkgdir/usr/lib/cups/backend/cups-pdf || return 1
+  $CC $CFLAGS -Wall -o cups-pdf cups-pdf.c
+}
+
+package() {
+  cd $srcdir/$pkgname-$pkgver/src
+  install -D -m700 cups-pdf $pkgdir/usr/lib/cups/backend/cups-pdf
 
   # Install Postscript Color printer
   cd ../extra
-  install -D -m644 CUPS-PDF.ppd $pkgdir/usr/share/cups/model/CUPS-PDF.ppd || return 1
+  install -D -m644 CUPS-PDF.ppd $pkgdir/usr/share/cups/model/CUPS-PDF.ppd
 
   # Install config file
-  install -D -m644 cups-pdf.conf $startdir/pkg/etc/cups/cups-pdf.conf || return 1
+  install -D -m644 cups-pdf.conf $pkgdir/etc/cups/cups-pdf.conf
 }
