--- a/iptraf-ng/trunk/PKGBUILD
+++ b/iptraf-ng/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=iptraf-ng
 pkgver=1.0.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A console-based network monitoring utility (a fork of original iptraf)"
 url="https://fedorahosted.org/iptraf-ng/"
 arch=('i686' 'x86_64')
@@ -25,6 +25,7 @@ build() {
 package() {
   cd "$srcdir/${pkgname}-${pkgver}"
   make DESTDIR=$pkgdir install
+  install -dm755 "${pkgdir}/var/lib/iptraf"
 }
 
 # vim: ts=2: ft=sh
