--- a/libotr/trunk/PKGBUILD
+++ b/libotr/trunk/PKGBUILD
@@ -1,11 +1,11 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 # Contributor: Bug <Bug2000@gmail.com>
 
 pkgname=libotr
 pkgver=3.2.0
-pkgrel=1
-pkgdesc='Off-the-Record Messaging Library and Toolkit.'
+pkgrel=2
+pkgdesc='Off-the-Record Messaging Library and Toolkit'
 arch=('i686' 'x86_64')
 url='http://www.cypherpunks.ca/otr/'
 license=('GPL' 'LGPL')
@@ -15,8 +15,12 @@ source=("http://www.cypherpunks.ca/otr/${pkgname}-${pkgver}.tar.gz")
 md5sums=('faba02e60f64e492838929be2272f839')
 
 build() {
-	cd $srcdir/$pkgname-$pkgver
+	cd "$srcdir/$pkgname-$pkgver"
 	./configure --prefix=/usr --mandir=/usr/share/man
-	make || return 1
-	make DESTDIR=$pkgdir install
+	make
+}
+
+package() {
+	cd "$srcdir/$pkgname-$pkgver"
+	make DESTDIR="$pkgdir" install
 }
