--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -90,7 +90,7 @@ pkgrel=1
 arch=('any')
 license=('MPL')
 url="http://www.mozilla.com/"
-makedepends=("firefox>=${pkgver}")
+depends=("firefox>=${pkgver}")
 _url=ftp://ftp.mozilla.org/pub/mozilla.org/firefox/releases/$pkgver/linux-i686/xpi
 
 source=(firefox-i18n-$pkgver-af.xpi::$_url/af.xpi
