--- a/rhythmbox/trunk/PKGBUILD
+++ b/rhythmbox/trunk/PKGBUILD
@@ -20,7 +20,7 @@ optdepends=('gstreamer0.10-ugly-plugins: Extra media codecs'
 options=('!libtool' '!emptydirs' '!strip')
 install=rhythmbox.install
 #source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.13/${pkgname}-${pkgver}.tar.bz2)
-source=(ftp://ftp.archlinux.org/others/${pkgname}/${pkgname}-${pkgver}-20110426.tar.xz)
+source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}-20110426.tar.xz)
 sha256sums=('513cfa653cf68a05b1fe5f6e41744af4baed0d0fff169000b3153effa232e23d')
 
 build() {
