--- a/kdepim-runtime/kde-unstable/PKGBUILD
+++ b/kdepim-runtime/kde-unstable/PKGBUILD
@@ -13,7 +13,7 @@ depends=('kdepimlibs' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
 install=${pkgname}.install
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-source=("http://download.kde.org/unstable/kdepim/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
+source=("http://download.kde.org/unstable/kdepim/${pkgver}/${pkgname}-${pkgver}.tar.bz2"
         'disable-l10n.patch')
 sha1sums=('0607224f725ee161d16d41a44bd02bacb8245434'
           '991d81435205185dcb2285a6e728f7756ae92b0d')
