--- a/kdepim/kde-unstable/PKGBUILD
+++ b/kdepim/kde-unstable/PKGBUILD
@@ -29,7 +29,7 @@ groups=('kde' 'kdepim')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'kdepim-runtime' 'libxss'
 	'pilot-link' 'kde-agent' 'docbook-xsl')
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-source=("http://download.kde.org/unstable/${pkgbase}/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
+source=("http://download.kde.org/unstable/${pkgbase}/${pkgver}/${pkgbase}-${pkgver}.tar.bz2"
         'disable-l10n.patch')
 sha1sums=('5227ac466247f043643bb9eaa7568e8b936edafe'
           '25e36f160ced051268e59fad6ed2de33a9c7657a')
