--- a/libcanberra/trunk/PKGBUILD
+++ b/libcanberra/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 
 pkgbase=libcanberra
 pkgname=(libcanberra libcanberra-pulse libcanberra-gstreamer)
-pkgver=0.26
-pkgrel=5
+pkgver=0.28
+pkgrel=1
 pkgdesc="A small and lightweight implementation of the XDG Sound Theme Specification"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -13,17 +13,16 @@ makedepends=('gtk-doc' 'libpulse' 'gstreamer0.10' 'gtk2' 'gtk3')
 options=(!emptydirs)
 url=http://0pointer.de/lennart/projects/libcanberra
 source=(http://0pointer.de/lennart/projects/${pkgbase}/${pkgbase}-${pkgver}.tar.gz
-        libcanberra-gtk-module.sh libcanberra-quit-add.patch)
-md5sums=('ee2c66ada7c851a4e7b6eb1682285a24'
-         'a54799e624aac814b9343ab05f25c38b'
-         'a147bce8a7addcd40b21faaaf028819b')
+        libcanberra-gtk-module.sh)
+md5sums=('c198b4811598c4c161ff505e4531b02c'
+         '21141257a1be80f3bc329829ff13b314')
 
 build() {
   cd "${srcdir}/${pkgbase}-${pkgver}"
-  patch -Np1 -i "${srcdir}/libcanberra-quit-add.patch"
   ./configure --sysconfdir=/etc --prefix=/usr --localstatedir=/var \
       --disable-static --with-builtin=dso --enable-null --disable-oss \
-      --enable-alsa --enable-gstreamer --enable-pulse
+      --enable-alsa --enable-gstreamer --enable-pulse \
+      --with-systemdsystemunitdir=/lib/systemd/system
   make
 }
 
@@ -37,11 +36,11 @@ package_libcanberra() {
   rm -f "${pkgdir}"/usr/lib/libcanberra-gtk*.la
   rm -f "${pkgdir}"/usr/lib/gtk-{2,3}.0/modules/*.la
   
-  install -m755 -d "${pkgdir}/usr/share/gconf" 
+  install -d "${pkgdir}/usr/share/gconf" 
   mv "${pkgdir}/etc/gconf/schemas" "${pkgdir}/usr/share/gconf/"
 
-  install -m755 -d "${pkgdir}/etc/X11/xinit/xinitrc.d"
-  install -m755 "${srcdir}/libcanberra-gtk-module.sh" "${pkgdir}/etc/X11/xinit/xinitrc.d/40-libcanberra-gtk-module"
+  install -D "${srcdir}/libcanberra-gtk-module.sh" \
+    "${pkgdir}/etc/X11/xinit/xinitrc.d/40-libcanberra-gtk-module"
 
   # Split plugins
   for _p in pulse gstreamer; do
@@ -53,7 +52,6 @@ package_libcanberra() {
 package_libcanberra-pulse() {
   pkgdesc="PulseAudio plugin for libcanberra"
   depends=("$pkgbase=$pkgver-$pkgrel" 'libpulse')
-  groups=('pulseaudio-gnome')
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
 
