--- a/libdbusmenu-qt/trunk/PKGBUILD
+++ b/libdbusmenu-qt/trunk/PKGBUILD
@@ -2,28 +2,29 @@
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libdbusmenu-qt
-pkgver=0.8.1
+pkgver=0.8.2
 pkgrel=1
 pkgdesc="A library that provides a Qt implementation of the DBusMenu spec"
 arch=('i686' 'x86_64')
 url="https://launchpad.net/libdbusmenu-qt"
 license=('GPL')
 depends=('qt')
-makedepends=('cmake' 'doxygen')
+makedepends=('cmake')
 source=("http://launchpad.net/${pkgname}/trunk/${pkgver}/+download/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('495bf59b9fcc00e4260fd5acbb21b78b')
+md5sums=('88be2548e00acf988c66ed3a35844f64')
 
 build() {
-  cd ${srcdir}
+  cd "${srcdir}"
   mkdir build
   cd build
   cmake ../${pkgname}-${pkgver} \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=Release
+    -DCMAKE_BUILD_TYPE=Release \
+    -DWITH_DOC=OFF
   make
 }
 
 package() {
-  cd ${srcdir}/build
-  make DESTDIR=${pkgdir} install
-} 
+  cd "${srcdir}/build"
+  make DESTDIR="${pkgdir}" install
+}
