--- a/python-distribute/trunk/PKGBUILD
+++ b/python-distribute/trunk/PKGBUILD
@@ -3,31 +3,37 @@
 # Contributor: Sebastien Binet <binet@farnsworth>
 pkgbase=python-distribute
 pkgname=('python-distribute' 'python2-distribute')
-pkgver=0.6.15
-pkgrel=3
+pkgver=0.6.16
+pkgrel=1
 pkgdesc="Easily build and distribute Python packages"
 arch=('any')
 license=('PSF')
 url="http://pypi.python.org/pypi/distribute"
 makedepends=('python' 'python2')
 source=(http://pypi.python.org/packages/source/d/distribute/distribute-${pkgver}.tar.gz
+        distribute-0.6.16-fix_deprecation_warnings.patch
         distribute-python2_and_3.patch)
-sha1sums=('af088df456ea6b25c0e23647648fd317ed6e0d1b'
-          'de635febfb11dc6878e5bdbac4a0e1d539c19d79')
+sha1sums=('d31026d1b80f6340d4a85b9b45e5a5703d443104'
+          'a20bb3f35a03847ebe02199f2ce1a1c3883ef171' 
+          'bcdafbe9b74b4bc2fbb866a3383a2b40c8f72543')
 
 build() {
    cd "${srcdir}"
+
+   pushd distribute-${pkgver}
+   patch -Np1 -i ../distribute-python2_and_3.patch
+   patch -Np1 -i ../distribute-0.6.16-fix_deprecation_warnings.patch
+   popd
+
    cp -a distribute-${pkgver}{,-python2}
 
    # Build python 3 module
    cd distribute-${pkgver}
-   patch -Np1 -i ../distribute-python2_and_3.patch
    python setup.py build
    python setup.py test
 
    # Build python 2 module
    cd ../distribute-${pkgver}-python2
-   patch -Np1 -i ../distribute-python2_and_3.patch
    python2 setup.py build
    python2 setup.py test
 }
