--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,13 +2,13 @@
 # Contributor: György Balló <ballogy@freestart.hu>
 
 pkgname=banshee
-pkgver=2.0.0
-pkgrel=3
+pkgver=2.0.1
+pkgrel=1
 pkgdesc="Music management and playback for GNOME"
 arch=('i686' 'x86_64')
 url="http://banshee.fm/"
 license=('MIT')
-depends=('libxxf86vm' 'mono-addins' 'notify-sharp-svn' 'boo' 'libwebkit' 'gdata-sharp' 'gtk-sharp-beans' 'gudev-sharp' 'gkeyfile-sharp' 'taglib-sharp' 'libmtp' 'libgpod' 'mono-zeroconf' 'gstreamer0.10-base-plugins' 'desktop-file-utils' 'shared-mime-info' 'hicolor-icon-theme' 'xdg-utils' 'gconf-sharp')
+depends=('libxxf86vm' 'mono-addins' 'notify-sharp-svn' 'boo' 'libwebkit' 'gdata-sharp' 'gtk-sharp-beans' 'gudev-sharp' 'ipod-sharp' 'gkeyfile-sharp' 'taglib-sharp' 'libmtp' 'libgpod' 'mono-zeroconf' 'gstreamer0.10-base-plugins' 'desktop-file-utils' 'shared-mime-info' 'hicolor-icon-theme' 'xdg-utils' 'gconf-sharp')
 makedepends=('intltool' 'gnome-doc-utils')
 optdepends=('gstreamer0.10-good-plugins: Extra media codecs'
             'gstreamer0.10-ugly-plugins: Extra media codecs'
@@ -18,7 +18,7 @@ optdepends=('gstreamer0.10-good-plugins: Extra media codecs'
 options=('!libtool')
 install=$pkgname.install
 source=(http://download.banshee.fm/$pkgname/stable/$pkgver/$pkgname-$pkgver.tar.bz2)
-md5sums=('ecd129a3232bda507b98c90e6f9272cf')
+md5sums=('83d77447936eed84eba2123b341b62ea')
 
 build() {
   export MONO_SHARED_DIR="$srcdir/.wabi"
