--- a/libwps/trunk/PKGBUILD
+++ b/libwps/trunk/PKGBUILD
@@ -3,24 +3,30 @@
 # Contributor: Robert McCathie <archaur at rmcc dot com dot au>
 
 pkgname=libwps
-pkgver=0.2.1
+pkgver=0.2.2
 pkgrel=1
 pkgdesc="a Microsoft Works file word processor format import filter library"
 arch=('i686' 'x86_64')
 url="http://libwps.sourceforge.net/"
 license=('LGPL')
 depends=('libwpd>=0.9.2')
+options=(!libtool)
 source=("http://downloads.sourceforge.net/project/libwps/$pkgname/$pkgname-$pkgver/$pkgname-$pkgver.tar.bz2")
-md5sums=('9e436bff44c60dc8b97cba0c7fc11a5c')
+#md5sums=('83d4029aebf290c0a9a8fee9c99638d3')
+#md5sums=('9e436bff44c60dc8b97cba0c7fc11a5c')
+md5sums=('29721a16f25967d59969d5f0ae485b4a')
 
 build() {
-	cd "$srcdir"/"$pkgname"-"$pkgver"
-	./configure --sysconfdir=/etc --prefix=/usr
+	cd "$srcdir/$pkgname-$pkgver"
+	sed -i -e 's: -Wall -Werror -pedantic::' configure.in
+	touch NEWS AUTHORS ChangeLog
+	autoreconf -fi
+	./configure  --prefix=/usr
 	make
 }
 
 package() {
-	cd "$srcdir"/"$pkgname"-"$pkgver"
+	cd "$srcdir/$pkgname-$pkgver"
 	make DESTDIR="$pkgdir" install
 }
 
