--- a/libtextcat/trunk/PKGBUILD
+++ b/libtextcat/trunk/PKGBUILD
@@ -17,22 +17,23 @@ source=(http://software.wise-guys.nl/download/${pkgname}-${pkgver}.tar.gz)
 md5sums=('128cfc86ed5953e57fe0f5ae98b62c2e')
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	./configure --prefix=/usr
-	make
+  cd ${srcdir}/${pkgname}-${pkgver}
+  ./configure --prefix=/usr \
+    --disable-static
+  make
 }
 
 package() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	make DESTDIR=${pkgdir} install
+  cd ${srcdir}/${pkgname}-${pkgver}
+  make DESTDIR=${pkgdir} install
 
-	install -D -m644 src/textcat.h ${pkgdir}/usr/include/textcat.h
-	mkdir -p ${pkgdir}/usr/share/libtextcat/{LM,ShortTexts}
-	install -m644 langclass/conf.txt ${pkgdir}/usr/share/libtextcat
-	install -m644 langclass/LM/*.lm ${pkgdir}/usr/share/libtextcat/LM
-	install -m644 langclass/ShortTexts/*.txt ${pkgdir}/usr/share/libtextcat/ShortTexts
+  install -D -m644 src/textcat.h ${pkgdir}/usr/include/textcat.h
+  mkdir -p ${pkgdir}/usr/share/libtextcat/{LM,ShortTexts}
+  install -m644 langclass/conf.txt ${pkgdir}/usr/share/libtextcat
+  install -m644 langclass/LM/*.lm ${pkgdir}/usr/share/libtextcat/LM
+  install -m644 langclass/ShortTexts/*.txt ${pkgdir}/usr/share/libtextcat/ShortTexts
 
-	install -D -m644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
-	sed -i 's|LM|/usr/share/libtextcat/LM|' ${pkgdir}/usr/share/libtextcat/conf.txt
+  install -D -m644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  sed -i 's|LM|/usr/share/libtextcat/LM|' ${pkgdir}/usr/share/libtextcat/conf.txt
 }
 
