--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,12 +1,13 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
+# Contributor: judd <jvinet@zeroflux.org>
 # Contributor: Mario Vazquez <mario_vazq@hotmail.com>
 
 pkgname=bind
 
 # Use a period and not a hyphen before the patch level for proper versioning.
-pkgver=9.8.0
-_pkgver=9.8.0
+pkgver=9.8.0.P1
+_pkgver=9.8.0-P1
 pkgrel=1
 
 pkgdesc='Berkeley Internet Name Daemon (BIND) is the reference implementation of the Domain Name System (DNS) protocols'
@@ -30,7 +31,7 @@ source=("http://ftp.isc.org/isc/bind9/${_pkgver}/${pkgname}-${_pkgver}.tar.gz"
         'named.logrotate'
         'localhost.zone'
         '127.0.0.zone')
-sha1sums=('33019694ef3119d9daa1e8ff5117a6688e188528'
+sha1sums=('aa8f308f218e437ac4bad616e0ae83a9b9c40c29'
           'ee52947062c1582858187716b776afa3613608fb'
           '2f737f4e81186447ac2ef370fa8dcea0b3abec31'
           '5277cf4d6fbc5728c55b51c77c9347d28393fb7c'
