--- a/dnsutils/trunk/PKGBUILD
+++ b/dnsutils/trunk/PKGBUILD
@@ -1,12 +1,13 @@
 # $Id$
-# Maintainer: kevin <kevin@archlinux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
+# Contributor: kevin <kevin@archlinux.org>
 # Contributor: mario <mario_vazq@hotmail.com>
 
 pkgname=dnsutils
 
 # Use a period and not a hyphen before the patch level for proper versioning.
-pkgver=9.8.0
-_pkgver=9.8.0
+pkgver=9.8.0.P1
+_pkgver=9.8.0-P1
 pkgrel=1
 
 pkgdesc='Various DNS utilities - dig host nslookup nsupdate'
@@ -18,7 +19,7 @@ replaces=('bind-tools' 'host')
 options=('!makeflags')
 source=("http://ftp.isc.org/isc/bind9/${_pkgver}/bind-${_pkgver}.tar.gz"
         'tools-only.patch')
-sha1sums=('33019694ef3119d9daa1e8ff5117a6688e188528'
+sha1sums=('aa8f308f218e437ac4bad616e0ae83a9b9c40c29'
           'ac88c89e25c26d73095a3dd85e1ca1070d184ded')
 
 build() {
